--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
         <link rel="shortcut icon" href="favicon.ico">
         <link rel="stylesheet" href="https://use.typekit.net/ylw1llk.css">
         <link rel="stylesheet" type="text/css" href="css/style.css" />
-        <script>document.documentElement.className="js";var supportsCssVars=function(){var e,t=document.createElement("style");return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
+        <script>document.documentElement.className="js";
+
+    var supportsCssVars=function(){var e,
+                                       t=document.createElement("style");
+                                   return t.innerHTML="root: { --tmp-var: bold; }",document.head.appendChild(t),e=!!(window.CSS&&window.CSS.supports&&window.CSS.supports("font-weight","var(--tmp-var)")),t.parentNode.removeChild(t),e};supportsCssVars()||alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
     </head>
     <body class="demo-1">
         <main>
@@ -44,9 +48,9 @@
                 <div id="canvas"></div>
                 <div class="wrapper">
                     <div class="plane" data-duration="2.5">
-                        <video playsinline muted src="videos/1.mp4" data-sampler="firstTexture" preload="auto"></video>
-                        <video playsinline muted src="videos/2.mp4" data-sampler="secondTexture"></video>
-                        <video playsinline muted src="videos/3.mp4" data-sampler="thirdTexture"></video>
+                        <video playsinline src="videos/1.mp4" data-sampler="firstTexture" preload="auto"></video>
+                        <video playsinline src="videos/2.mp4" data-sampler="secondTexture"></video>
+                        <video playsinline src="videos/3.mp4" data-sampler="thirdTexture"></video>
                     </div>
                 </div>
             </div>
