video file update

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <body class="demo-1">
         <main>
             <div class="frame">
-                <h1 class="frame__title">WebGL Video Transitions with <a href="https://www.curtainsjs.com/">curtains.js</h1>
+                <h1 class="frame__title">WebGL Video Transitions with <a href="https://www.curtainsjs.com/">curtains.js</a></h1>
                 <nav class="frame__links">
                     <a href="https://tympanus.net/Tutorials/Mirrors/">Previous demo</a>
                     <a href="https://tympanus.net/codrops/?p=51333">Article</a>
