--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <div id="canvas"></div>
                 <div class="wrapper">
                     <div class="plane" data-duration="2.5">
-                        <video playsinline src="videos/1.mp4" data-sampler="firstTexture" preload="auto"></video>
-                        <video playsinline src="videos/2.mp4" data-sampler="secondTexture"></video>
-                        <video playsinline src="videos/3.mp4" data-sampler="thirdTexture"></video>
+                        <video playsinline src="1.mp4" data-sampler="firstTexture" preload="auto"></video>
+                        <video playsinline src="2.mp4" data-sampler="secondTexture"></video>
+                        <video playsinline src="3.mp4" data-sampler="thirdTexture"></video>
                     </div>
                 </div>
             </div>
