--- a/index.html
+++ b/index.html
@@ -146,6 +146,6 @@
                  gl_FragColor = mix(vec4(0.,0.,0.,0),mix(current,next,circleProgress), mask);
             }
         </script>
-        <script src="js/app.js"></script>
+        <script src="app.be8f17b5.js"></script>
     </body>
 </html>
