--- a/videoTransitions/index.html
+++ b/videoTransitions/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-        <title>WebGL Video Transitions | Demo 1 | Codrops</title>
+        <title>WebGL Video Transitions | Demo 1 | </title>
         <meta name="description" content="Some WebGL video transitions with different effects using curtains.js">
         <meta name="keywords" content="curtains.js, webgl, video transition, animation, shader, javascript, web design">
-        <meta name="author" content="Codrops">
+        <meta name="author" content="">
         <link rel="shortcut icon" href="favicon.2e5f6236.ico">
         <link rel="stylesheet" href="https://use.typekit.net/ylw1llk.css">
         <link rel="stylesheet" type="text/css" href="style.fddd6ed0.css">
@@ -19,7 +19,6 @@ var supportsCssVars = function supportsCssVars() {
 };
 
 supportsCssVars() || alert("Please view this demo in a modern browser that supports CSS Variables.");</script>
-        <script src="//tympanus.net/codrops/adpacks/analytics.js"></script>
     </head>
     <body class="demo-1">
         <main>
@@ -53,9 +52,9 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
                 <div id="canvas"></div>
                 <div class="wrapper">
                     <div class="plane" data-duration="2.5">
-                        <video playsinline src="1.4cfaa6a8.mp4" data-sampler="firstTexture" preload="auto"></video>
-                        <video playsinline src="2.798a5531.mp4" data-sampler="secondTexture"></video>
-                        <video playsinline src="3.0fdb9a6e.mp4" data-sampler="thirdTexture"></video>
+                        <video playsinline src="1.mp4" data-sampler="firstTexture" preload="auto"></video>
+                        <video playsinline src="2.mp4" data-sampler="secondTexture"></video>
+                        <video playsinline src="3.mp4" data-sampler="thirdTexture"></video>
                     </div>
                 </div>
             </div>
@@ -156,6 +155,5 @@ supportsCssVars() || alert("Please view this demo in a modern browser that suppo
             }
         </script>
         <script src="app.be8f17b5.js"></script>
-        <script src="https://tympanus.net/codrops/adpacks/cda.js"></script>
     </body>
 </html>
