--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Video Opening Animation</title>
-		<meta name="description" content="A simple video opening animation based on the one seen on http://momentsapp.com/" />
+		<title>Helena Chang Portfolio</title>
+		<meta name="description" content="Helena Chang - Video Reel" />
 		<meta name="keywords" content="html5 video, animation, moments app, fullscreen, effect, web design, tutorial" />
-		<meta name="author" content="Codrops" />
+		<meta name="author" content="lena" />
 		<link rel="shortcut icon" href="favicon.ico">
 		<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 		<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.3.0/css/font-awesome.min.css" />
@@ -23,7 +23,7 @@
 					<a class="codrops-icon codrops-icon--prev" href="" title="Previous Demo"><span>Previous Demo</span></a>
 					<a class="codrops-icon codrops-icon--drop" href="http://tympanus.net/codrops/?p=24567" title="Back to the article"><span>Back to the Codrops article</span></a>
 				</div>
-				<h1>Video Opening Animation</h1>
+				<h1>HELENA CHANG</h1>
 			</header><!-- /codrops-header -->
 			<div class="deco-stack">
 				<img class="deco-stack__img deco-stack__img--rotation-1" src="media/boxpic1.jpg" alt="Picture 1" />
@@ -46,7 +46,7 @@
 					<i class="fa fa-spinner fa-pulse"></i>
 				</div>
 				<button class="action action--hidden action--play">
-					<i class="fa fa-play"></i><span class="action__label">Watch the video</span>
+					<i class="fa fa-play"></i><span class="action__label">Watch my reel</span>
 				</button>
 			</div>
 		</div><!-- /container -->
