--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 				<h1>HELENA CHANG</h1>
 			</header><!-- /codrops-header -->
 			<div class="deco-stack">
-				<img class="deco-stack__img deco-stack__img--rotation-1" src="media/boxpic1.jpg" alt="Picture 1" />
-				<img class="deco-stack__img deco-stack__img--rotation-2" src="media/boxpic2.jpg" alt="Picture 2" />
-				<img class="deco-stack__img deco-stack__img--rotation-3" src="media/boxpic3.jpg" alt="Picture 3" />
+				<img class="deco-stack__img deco-stack__img--rotation-1" src="media/pic1.jpg" alt="Picture 1" />
+				<img class="deco-stack__img deco-stack__img--rotation-2" src="media/pic2.jpg" alt="Picture 2" />
+				<img class="deco-stack__img deco-stack__img--rotation-3" src="media/pic3.jpg" alt="Picture 3" />
 			</div>
 			<div class="video-wrap">
 				<div class="video-inner">
