--- a/server/index.html
+++ b/server/index.html
@@ -38,9 +38,9 @@ var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga
 				<h1>Video Opening Animation</h1>
 			</header><!-- /codrops-header -->
 			<div class="deco-stack">
-				<img class="deco-stack__img deco-stack__img--rotation-1" src="media/boxpic1.jpg" alt="Picture 1" />
-				<img class="deco-stack__img deco-stack__img--rotation-2" src="media/boxpic2.jpg" alt="Picture 2" />
-				<img class="deco-stack__img deco-stack__img--rotation-3" src="media/boxpic3.jpg" alt="Picture 3" />
+				<img class="deco-stack__img deco-stack__img--rotation-1" src="media/pic1.jpg" alt="Picture 1" />
+				<img class="deco-stack__img deco-stack__img--rotation-2" src="media/pic2.jpg" alt="Picture 2" />
+				<img class="deco-stack__img deco-stack__img--rotation-3" src="media/pic3.jpg" alt="Picture 3" />
 			</div>
 			<div class="video-wrap">
 				<div class="video-inner">
